--- a/resources/css/game.css
+++ b/resources/css/game.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Hammersmith One';
-    src: url("/font/HammersmithOne-Regular.ttf") format("truetype");
+    src: url("../font/HammersmithOne-Regular.ttf") format("truetype");
     font-style: normal;
 }
 
@@ -9,8 +9,6 @@ body{
     background: linear-gradient(to right, #004e92, #000428); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     text-align: center;
     font-family: "Hammersmith One";
-    text-align: center;
-    font-family: 'Hammersmith One';
 }
 .contenedor{
     height: 100vh;
