Falta CSS, poner bien las fotos y la barra de progreso

--- a/resources/css/game.css
+++ b/resources/css/game.css
@@ -91,7 +91,8 @@ body{
     color:white;
   }
 
-  .btn-footer{
+  .btn-puntuacion{
+    background-color: #fff;
     color: #000428;
     text-decoration: none;
   }
