--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -14,13 +14,17 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    min-height: 100vh;
     width: 65%;
     height: 600px;
     margin: auto;
     font-family: "Hammersmith One";
 }
 
+#header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
 .titulo {
     display: flex;
     width: 100%;
@@ -28,8 +32,17 @@ body {
     color: #fff;
     justify-content: center;
     align-self: center;
+    text-decoration: none;
 }
-
+ul{
+    width: 20%;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 0;
+    align-items: center;
+    margin: 0;
+    list-style: none;
+}
 .card {
     height: 500px;
     margin: 10px;
@@ -40,6 +53,26 @@ body {
     transition: .4s flex;
 }
 
+.nav-link{
+    color: #fff;
+    text-decoration: none;
+    transition: all .5s;
+    padding: 10px;
+    border-radius: 25px;
+    -webkit-transition: all .5s;
+    -moz-transition: all .5s;
+    -ms-transition: all .5s;
+    -o-transition: all .5s;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    -ms-border-radius: 25px;
+    -o-border-radius: 25px;
+}
+
+.nav-link:hover{
+    background-color: #fff;
+    color: #1F1C2C;
+}
 .contenido {
     width: 100%;
     height: 100%;
