--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -66,20 +66,26 @@ h2{
 
 .home a{
     position: absolute;
-    top: 2%;
-    right: 3%;
+    top: 5%;
+    right: 15%;
     color: #fff;
-    text-decoration: underline;
-    cursor: pointer;
-    transition: all 300ms;
-    -webkit-transition: all 300ms;
-    -moz-transition: all 300ms;
-    -ms-transition: all 300ms;
-    -o-transition: all 300ms;
+    text-decoration: none;
+    transition: all .5s;
+    padding: 10px;
+    border-radius: 25px;
+    -webkit-transition: all .5s;
+    -moz-transition: all .5s;
+    -ms-transition: all .5s;
+    -o-transition: all .5s;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    -ms-border-radius: 25px;
+    -o-border-radius: 25px;
 }
 
 .home a:hover{
-    color: #8e8e8e;
+    background-color: #fff;
+    color: #000;
 }
 .inputbox{
     position: relative;
