--- a/resources/css/perfil.css
+++ b/resources/css/perfil.css
@@ -5,18 +5,8 @@
 }
 
 body {
-    background: linear-gradient(to right, #928DAB, #1F1C2C);
+    background: linear-gradient(to right, #4A1C39, #000000);
     text-align: center;
-    font-family: "Hammersmith One";
-}
-
-#contenedor {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 65%;
-    height: 600px;
-    margin: auto;
     font-family: "Hammersmith One";
 }
 
@@ -25,7 +15,6 @@ body {
     flex-direction: row;
     justify-content: space-around;
 }
-
 .titulo {
     display: flex;
     width: 100%;
@@ -35,8 +24,7 @@ body {
     align-self: center;
     text-decoration: none;
 }
-
-ul {
+ul{
     width: 20%;
     display: flex;
     justify-content: space-evenly;
@@ -45,52 +33,274 @@ ul {
     margin: 0;
     list-style: none;
 }
-
-.form {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 65%;
-    height: 400px;
-    margin: auto;
-    font-family: "Hammersmith One";
-}
-
-.form_container {
-    width: 450px;
-    border: 1px solid black;
+.card {
+    height: 500px;
+    margin: 10px;
     border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
-    overflow: hidden;
+    background-size: cover;
+    box-shadow: 3px 5px 5px #00000072;
+    flex: 1;
+    transition: .4s flex;
+}
+
+
+.nav-link{
+    color: #fff;
+    text-decoration: none;
+    transition: all .5s;
+    padding: 10px;
+    border-radius: 25px;
+    -webkit-transition: all .5s;
+    -moz-transition: all .5s;
+    -ms-transition: all .5s;
+    -o-transition: all .5s;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    -ms-border-radius: 25px;
+    -o-border-radius: 25px;
+}
+
+.nav-item-dropdown{
+    width: 20%;
+    color: #fff;
     display: flex;
-    flex-direccion: column;
+    justify-content: space-evenly;
+    padding: 0;
     align-items: center;
-    background: rgb(26, 26, 26);
-    color: rgb(240, 240, 240);
+    margin: 0;
+    list-style: none;
 }
 
-.form_group div {
-    position: relative;
-    margin-top: -4.5rem;
-    border-radius: 80px;
-    -webkit-border-radius: 80px;
-    -moz-border-radius: 80px;
-    -ms-border-radius: 80px;
-    -o-border-radius: 80px;
-    width: 150px;
-    border: 2px solid black;
-    z-index: 2;
+
+.dropdown-item{
+    color: #fff;
+    text-decoration: none;
+    transition: all .5s;
+    padding: 10px;
+    border-radius: 25px;
+    margin-left: 8px;
+    -webkit-transition: all .5s;
+    -moz-transition: all .5s;
+    -ms-transition: all .5s;
+    -o-transition: all .5s;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    -ms-border-radius: 25px;
+    -o-border-radius: 25px;
 }
 
-.btn btn-sm btn-success {
+.dropdown-item:hover{
+    background-color: #fff;
+    color: #1F1C2C;
+}
+
+#logout-form.d-none{
+    margin: 0;
+}
+
+.container {
+    max-width: 600px;
+    margin: 0 auto;
+    margin-top: 100px;
+    padding: 30px;
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.0);
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    align-content: center;
+    justify-content: center;
+}
+
+.profile-info {
     display: flex;
-    width: 100%;
-    font-size: 48px;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.profile-info img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-right: 20px;
+}
+
+.profile-details {
+    flex-grow: 1;
     color: #fff;
     justify-content: center;
     align-self: center;
     text-decoration: none;
+}
+
+.profile-details h2 {
+    margin-bottom: 5px;
+}
+
+.profile-details p {
+    margin-bottom: 10px;
+}
+
+p{
+    color: #fff;
+}
+
+.edit-button {
+    color: #fff;
+    text-decoration: none;
+    transition: all .5s;
+    padding: 10px 20px;
+    border-radius: 25px;
+    -webkit-transition: all .5s;
+    -moz-transition: all .5s;
+    -ms-transition: all .5s;
+    -o-transition: all .5s;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    -ms-border-radius: 25px;
+    -o-border-radius: 25px;
+}
+
+.edit-button:hover {
+    background-color: #fff;
+    color: #1F1C2C;
+}
+
+.contenido__pagina {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.configuracion {
+    position: relative;
+    max-width: 500px;
+    background-color: transparent;
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem 3rem;
+    backdrop-filter: blur(12px); /* Efecto de desenfoque en el fondo */
+}
+
+.configuracion__titulo {
+    font-size: 3rem;
+    color: #fff;
+    text-align: center;
+    margin-right: 8px;
+    margin: 2rem;
+    font-family: 'Hedvig Letters Serif', serif;
+}
+
+.form_grupo {
+    margin: 20px 0;
+    position: relative;
+}
+
+.form_label {
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    color: #fff;
+    font-size: 1rem;
+    pointer-events: none;
+    transition: all 0.5s ease-in-out;
+}
+
+.form_input {
+    width: 100%;
+    height: 40px;
+    background: transparent;
+    border: none;
+    outline: none;
+    border-bottom: 2px solid #fff;
+    font-size: 1rem;
+    color: #fff;
+    padding-left: 5px;
+    transition: border-color 0.3s ease;
+}
+
+.form_input:focus ~ .form_label,
+.form_input:valid ~ .form_label {
+    top: -10px; /* Mover el label hacia arriba cuando el input está enfocado o tiene contenido válido */
+    font-size: 0.8rem; /* Cambiar el tamaño del label cuando está arriba */
+    color: #aaa; /* Cambiar color del label cuando está arriba */
+}
+
+.form_input:focus {
+    border-bottom: 2px solid #aaa; /* Cambiar el color del borde inferior del input cuando está enfocado */
+}
+.form_submit {
+    color: #fff;
+    text-decoration: none;
+    transition: all .5s;
+    padding: 10px 20px;
+    width: 100%;
+    height: 50px;
+    border-radius: 40px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: 600;
+    transition: background-color 0.4s ease;
+    background-color: rgba(255, 255, 255, 0.0);
+}
+
+.form_submit:hover {
+    background-color: rgba(255, 255, 255, 1.0);
+    color: #000000;
+}
+
+.register {
+    font-size: 0.9rem;
+    color: #fff;
+    text-align: center;
+    margin-top: 25px;
+}
+
+.register p a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: 600;
+}
+
+.register p a:hover {
+    text-decoration: underline;
+}
+
+/* Estilos para el botón de subir foto */
+.form_grupo .upload-btn {
+    display: inline-block;
+    padding: 10px 20px;
+    color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+    text-align: center; /* Centrar texto dentro del botón */
+    transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+}
+
+.form_grupo .upload-btn:hover {
+    background-color: rgba(255, 255, 255, 1.0);
+    color: #000000;
+}
+
+/* Estilos para el input de tipo file */
+.form_grupo input[type="file"] {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+}
+
+/* Estilos para el texto dentro del botón */
+.form_grupo .upload-btn span {
+    pointer-events: none; /* Evitar interacciones con el texto dentro del botón */
 }
