--- a/resources/css/score.css
+++ b/resources/css/score.css
@@ -5,18 +5,9 @@
 }
 
 body {
-    background: linear-gradient(to right, #928DAB, #1F1C2C);
+    background: -webkit-linear-gradient(to right, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #434343, #000000);
     text-align: center;
-    font-family: "Hammersmith One";
-}
-
-#contenedor {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 65%;
-    height: 600px;
-    margin: auto;
     font-family: "Hammersmith One";
 }
 
@@ -33,6 +24,7 @@ body {
     justify-content: center;
     align-self: center;
     text-decoration: none;
+    font-family: "Hammersmith One";
 }
 ul{
     width: 20%;
@@ -71,12 +63,11 @@ ul{
 
 .nav-link:hover{
     background-color: #fff;
-    color: #1F1C2C;
+    color: #000;
 }
 
 .nav-item-dropdown{
     width: 20%;
-    color: #fff;
     display: flex;
     justify-content: space-evenly;
     padding: 0;
@@ -85,14 +76,14 @@ ul{
     list-style: none;
 }
 
-
-.dropdown-item{
+.dropdown-toggle{
+    font-family: "Hammersmith One";
     color: #fff;
     text-decoration: none;
     transition: all .5s;
     padding: 10px;
     border-radius: 25px;
-    margin-left: 8px;
+    margin: 0;
     -webkit-transition: all .5s;
     -moz-transition: all .5s;
     -ms-transition: all .5s;
@@ -103,69 +94,11 @@ ul{
     -o-border-radius: 25px;
 }
 
-.dropdown-item:hover{
+.dropdown-toggle:hover{
     background-color: #fff;
     color: #1F1C2C;
 }
 
 #logout-form.d-none{
     margin: 0;
-}
-
-.contenido {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background: #00000066;
-    opacity: 0;
-    transition: all .5s;
-    cursor: pointer;
-}
-
-.card:hover {
-    flex: 2;
-}
-
-.card:hover .contenido {
-    opacity: 1;
-    border-radius: 10px;
-}
-
-.contenido a {
-    text-decoration: none;
-    font-size: 32px;
-    color: #ffffffdd;
-}
-
-.matematicas {
-    background-image: url("../img/matematica.jpg");
-}
-
-.fisica {
-    background-image: url("../img/fisica.jpg");
-}
-
-.quimica {
-    background-image: url("../img/one.jpg");
-}
-
-.matematicas:hover .contenido {
-    text-decoration: none;
-    font-size: 32px;
-    background-color: #1818c677;
-    border-radius: 10px;
-}
-
-.quimica:hover .contenido {
-    text-decoration: none;
-    font-size: 32px;
-    background-color: #0c844277;
-    border-radius: 10px;
-}
-
-.fisica:hover .contenido {
-    border-radius: 10px;
 }
