Agregado Contador de Comodines

--- a/resources/css/game.css
+++ b/resources/css/game.css
@@ -206,3 +206,9 @@ ul{
     background-color: #fff;
     color: #000;
   }
+
+  #contadorComodines {
+    font-size: 18px;
+    color: #fff;
+    margin-top: 10px;
+}
