--- a/resources/css/game.css
+++ b/resources/css/game.css
@@ -212,3 +212,27 @@ ul{
     color: #fff;
     margin-top: 10px;
 }
+
+#contadorComodinesSaltar {
+    font-size: 18px;
+    color: #333;
+    margin-top: 10px; 
+    font-weight: bold;
+}
+
+#progress-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 20px;
+    height: 100%;
+    background-color: #f3f3f3;
+    z-index: 1000;
+}
+
+#progress-bar {
+    width: 100%;
+    height: 0;
+    background-color: #4caf50;
+    transition: height 0.5s;
+}
